def/force-app/main/default/objects/Core_Team_Member__c/Core_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Core Team Member</label>
    <nameField>
        <label>Core Team Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Core Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>