def/force-app/main/default/objects/Core_Team_Member__c/fields/Offering_Release_ID_Master_Detail_Rel__c.field-meta.xml
<CustomField>
    <fullName>Offering_Release_ID_Master_Detail_Rel__c</fullName>
    <label>Offering Release ID Master Detail Rel</label>
    <referenceTo>Offering_Release__c</referenceTo>
    <relationshipLabel>Core Team Members</relationshipLabel>
    <relationshipName>Core_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>