def/force-app/main/default/objects/Core_Team_Member__c/fields/Role_ID_Master_Detail_Rel__c.field-meta.xml
<CustomField>
    <fullName>Role_ID_Master_Detail_Rel__c</fullName>
    <label>Role ID Master Detail Rel</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Core Team Members</relationshipLabel>
    <relationshipName>Core_Team_Members</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>