def/force-app/main/default/objects/Core_Team_Member__c/fields/User_ID_Lookup_Rel__c.field-meta.xml
<CustomField>
    <fullName>User_ID_Lookup_Rel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User ID Lookup Rel</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Core_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>